Small layout bug fixes.

--- a/DemaciaTV/public/stylesheets/style.css
+++ b/DemaciaTV/public/stylesheets/style.css
@@ -10,5 +10,5 @@ p{margin:0}
 .twitch-chat{width:300px;height:100%}
 #header{position:fixed;top:0;right:300px;left:0;overflow:hidden;height:75px;background:#aaa}
 #header > p,#header > div{float:left}
-#content{position:fixed;top:75px;right:300px;left:0;bottom:0;padding:9px}
-#footer{position:fixed;bottom:0;right:300px;left:0;overflow:hidden;height:0;background:#aaa}
+#content{position:fixed;top:75px;right:300px;left:0;bottom:75px;padding:9px}
+#footer{position:fixed;bottom:0;right:300px;left:0;overflow:hidden;height:75px;background:#aaa}
